change to master

--- a/.github/workflows/test-template.yml
+++ b/.github/workflows/test-template.yml
@@ -3,7 +3,7 @@ name: Test for template build
 on:
   push:
     branches:
-      - main
+      - master
 
 concurrency:
   group: ${{ github.workflow }}
