--- a/.github/workflows/godot-template-build.yml
+++ b/.github/workflows/godot-template-build.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [linux, windows]
+        platform: [linux]
     steps:
       - uses: kuma-gee/action-godot-template@master
         with:
