--- a/.github/workflows/godot-template-build.yml
+++ b/.github/workflows/godot-template-build.yml
@@ -1,13 +1,6 @@
 name: Build Godot Templates
 
 on:
-  workflow_call:
-    inputs:
-      version:
-        description: 'Godot Version'
-        required: true
-        type: string
-        default: '4.3'
   workflow_dispatch:
     inputs:
       version:
@@ -15,6 +8,11 @@ on:
         required: true
         type: string
         default: '4.3'
+      platform:
+        description: 'Platform to build'
+        required: true
+        type: string
+        default: 'linux'
 
 concurrency:
   group: ${{ github.workflow }}
@@ -25,7 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [linux]
+        platform:
+          - ${{ inputs.platform }}
     steps:
       - uses: kuma-gee/action-godot-template@master
         with:
