--- a/setup/action.yml
+++ b/setup/action.yml
@@ -14,6 +14,9 @@ inputs:
   encryption-key:
     description: 'Encryption key'
     default: ''
+  repo:
+    description: 'Repository to fetch the custom templates from'
+    default: ''
 runs:
   using: "composite"
   steps:
@@ -31,6 +34,7 @@ runs:
         version: 'tags/template-${{ inputs.version }}'
         file: template_release.*${{ inputs.channel }}.*
         target: ${{ inputs.game-folder }}/custom_templates/
+        repo: ${{ inputs.repo }}
         regex: true
     
     # The credentials file does not exist and we don't know how many export presets there are
